--- a/source/index.html
+++ b/source/index.html
@@ -207,7 +207,7 @@
                 </picture>
               </div>
               <p class="prizes__desc">
-                <b>3</b>
+                <b class="prizes__count">3</b>
                 <span>загадочных путешествия</span>
               </p>
             </li>
@@ -219,7 +219,7 @@
                 </picture>
               </div>
               <p class="prizes__desc">
-                <b>7</b>
+                <b class="prizes__count">7</b>
                 <span>надежных чемоданов</span>
               </p>
             </li>
@@ -231,7 +231,7 @@
                 </picture>
               </div>
               <p class="prizes__desc">
-                <b>900</b>
+                <b class="prizes__count">900</b>
                 <span>
                   промокодов на&nbsp;скидку 15%
                   <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
